style.css
/* general rules ******************************************************/

html, body, #map {
  height: 100%;
  width: 100%;
  overflow: hidden; /* workaround for #373 */
  background: #000;
}

body {
  font-size: 14px;
  font-family: "coda",arial,helvetica,sans-serif;
  margin: 0;
}

#scrollwrapper {
  overflow: hidden;
  position: fixed;
  right: -38px;
  top: 0;
  width: 340px;
  bottom: 45px;
  z-index: 1001;
}

#sidebar {
  background-color: rgba(8, 48, 78, 0.9);
  border-left: 1px solid #20A8B1;
  color: #888;
  position: relative;
  left: 0;
  top: 0;
  max-height: 100%;
  overflow-y:scroll;
  overflow-x:hidden;
  z-index: 3000;
}

#sidebartoggle {
  display: block;
  padding: 20px 5px;
  margin-top: -31px; /* -(toggle height / 2) */
  line-height: 10px;
  position: absolute;
  top: 340px; /* (sidebar height / 2) */
  z-index: 3001;
  background-color: rgba(8, 48, 78, 0.9);
  color: #FFCE00;
  border: 1px solid #20A8B1;
  border-right: none;
  border-radius: 5px 0 0 5px;
  text-decoration: none;
}

.enl {
  color: #03fe03 !important;
}

.res {
  color: #00c5ff !important;
}

.none {
  color: #fff;
}

a {
  color: #ffce00;
  cursor: pointer;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

/* map display, required because GMaps uses a high z-index which is
 * normally above Leaflet’s vector pane */
.leaflet-map-pane {
  z-index: 1000;
}

.leaflet-control-layers-overlays label.disabled {
  text-decoration: line-through;
  cursor: help;
}

.help {
  cursor: help;
}

.toggle {
  display: block;
  height: 0;
  width: 0;
}

/* field mu count */
.fieldmu {
  color: #FFCE00;
  font-size:13px;
  font-family: "coda",arial,helvetica,sans-serif; /*override leaflet-container */
  text-align: center;
  text-shadow: 0 0 0.2em black, 0 0 0.2em black, 0 0 0.2em black;
}


/* chat ***************************************************************/

#chatcontrols {
  color: #FFCE00;
  background: rgba(8, 48, 78, 0.9);
  position: absolute;
  left: 0;
  z-index: 3001;
  height: 26px;
  padding-left:1px;
}

#chatcontrols.expand {
  top: 0;
  bottom: auto;
}

#chatcontrols a {
  margin-left: -1px;
  display: inline-block;
  width: 94px;
  text-align: center;
  height: 24px;
  line-height: 24px;
  border: 1px solid #20A8B1;
  vertical-align: top;
}

#chatcontrols a:first-child {
  letter-spacing:-1px;
  text-decoration: none !important;
}

#chatcontrols a.active {
  border-color: #FFCE00;
  border-bottom-width:0px;
  font-weight:bold
}

#chatcontrols a.active + a {
  border-left-color: #FFCE00
}


#chatcontrols .toggle {
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  margin: 6px auto auto;
}

#chatcontrols .expand {
  border-bottom: 10px solid #FFCE00;
}

#chatcontrols .shrink {
  border-top: 10px solid #FFCE00;
}


#chat {
  position: absolute;
  width: 708px;
  bottom: 23px;
  left: 0;
  z-index: 3000;
  background: rgba(8, 48, 78, 0.9);
  font-size: 12.6px;
  color: #eee;
  border: 1px solid #20A8B1;
  border-bottom: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

em {
  color: red;
  font-style: normal;
}

#chat.expand {
  height:auto;
  top: 25px;
}

#chatpublic, #chatfull, #chatcompact {
  display: none;
}

#chat > div {
  overflow-x:hidden;
  overflow-y:scroll;
  height: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 2px;
  position:relative;
}

#chat table, #chatinput table {
  width: 100%;
  table-layout: fixed;
  border-spacing: 0m;
  border-collapse: collapse;
}

#chatinput table {
  height: 100%;
}

#chat td, #chatinput td {
  font-family: Verdana, sans-serif;
  font-size: 12.6px;
  vertical-align: top;
  padding-bottom: 3px;
}

/* time */
#chat td:first-child, #chatinput td:first-child {
  width: 44px;
  overflow: hidden;
  padding-left: 2px;
  color: #bbb;
  white-space: nowrap;
}

#chat time {
  cursor: help;
}

/* nick */
#chat td:nth-child(2), #chatinput td:nth-child(2) {
  width: 91px;
  overflow: hidden;
  padding-left: 2px;
  white-space: nowrap;
}

mark {
  background: transparent;
}

.invisep {
  display: inline-block;
  width: 1px;
  height: 1px;
  overflow:hidden;
  color: transparent;
}

/* divider */
summary {
  color: #bbb;
  display: inline-block;
  font-family: Verdana,sans-serif;
  height: 16px;
  overflow: hidden;
  padding: 0 2px;
  white-space: nowrap;
  width: 100%;
}

#chatinput {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 0 2px;
  background: rgba(8, 48, 78, 0.9);
  width: 708px;
  border: 1px solid #20A8B1;
  z-index: 3001;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

#chatinput td {
  padding-bottom: 1px;
  vertical-align: middle;
}


#chatinput input {
  background: transparent;
  font-size: 12.6px;
  font-family: Verdana,sans-serif;
  color: #EEEEEE;
  width: 100%;
  height: 100%;
}



/* sidebar ************************************************************/

#sidebar > * {
  border-bottom: 1px solid #20A8B1;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}



#sidebartoggle .toggle {
  border-bottom: 10px solid transparent;
  border-top: 10px solid transparent;
}

#sidebartoggle .open {
  border-right: 10px solid #FFCE00;
}

#sidebartoggle .close {
  border-left: 10px solid #FFCE00;
}

/* player stats */
#playerstat {
  height: 30px;
}

h2 {
  color: #ffce00;
  font-size: 21px;
  padding: 0 4px;
  margin: 0;
  cursor:help;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;
}

h2 #name {
  display: inline-block;
  overflow: hidden;
  text-overflow: "~";
  vertical-align: top;
  white-space: nowrap;
  width: 205px;
  position: relative;
}

h2 #stats {
  float: right;
  height: 100%;
  overflow: hidden;
}
/* ... */

